objects/wktLocationEmployeeProgram__c.object
<CustomObject>
    <description>A generated list of locations with employees and programs.</description>
    <fields>
        <fullName>ActionItemFormula__c</fullName>
        <description>Action items for this employee. Indicates whether survey needs to be taken, or which documents we need.</description>
        <formula>IF
(
     isblank(SurveyDate__c ),
    &apos;Take survey.&apos;,
    IF 
    (  
        NOT(ISBLANK(DocumentNeededText__c)),
        &apos;Need: &apos; &amp; DocumentNeededText__c &amp; &apos;. &apos;,
        &apos;&apos;
    )
    &amp;
    IF
    (
        NOT(ISBLANK(DocumentReplacementNeededText__c)),
        &apos;Resend: &apos; &amp; DocumentReplacementNeededText__c &amp; &apos;. &apos;,
        &apos;&apos;
    )
)</formula>
        <inlineHelpText>Action items for this employee. Indicates whether survey needs to be taken, or which documents we need.</inlineHelpText>
        <label>Action Items</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentListFormula__c</fullName>
        <description>A comprehensive but succinct description of the current documentation needs of this employee for this program.</description>
        <formula>IF 
(  
    NOT(ISBLANK(DocumentNeededText__c)),
    &apos;Need: &apos; &amp; DocumentNeededText__c &amp; &apos;. &apos;,
    &apos;&apos;
)
&amp;
IF
(
    NOT(ISBLANK(DocumentReplacementNeededText__c)),
    &apos;Resend: &apos; &amp; DocumentReplacementNeededText__c &amp; &apos;. &apos;,
    &apos;&apos;
)
&amp;
IF
(
    NOT(ISBLANK(DocumentReceivedText__c)),
    &apos;Received: &apos; &amp; DocumentReceivedText__c &amp; &apos;.&apos;,
    &apos;&apos;
)</formula>
        <inlineHelpText>A comprehensive but succinct description of the current documentation needs of this employee for this program.</inlineHelpText>
        <label>Document List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentNeededText__c</fullName>
        <description>A list of documents that are still needed in order to document this program for at least one category.</description>
        <inlineHelpText>A list of documents that are still needed in order to document this program for at least one category.</inlineHelpText>
        <label>Documents Needed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentReceivedText__c</fullName>
        <description>Documents that have been received and are no longer sought.</description>
        <inlineHelpText>Documents that have been received and are no longer sought.</inlineHelpText>
        <label>Documents Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentReplacementNeededText__c</fullName>
        <description>Documents that were received but are incomplete, incorrect, illegible, or otherwise need replacing.</description>
        <inlineHelpText>Documents that were received but are incomplete, incorrect, illegible, or otherwise need replacing.</inlineHelpText>
        <label>Document Replacements Needed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeFullNameFormula__c</fullName>
        <description>The full name of the employee.</description>
        <formula>Employment__r.Employee__r.FullNameFormula__c</formula>
        <inlineHelpText>The full name of the employee.</inlineHelpText>
        <label>Employee Full Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeName__c</fullName>
        <label>EmployeeName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSSNFormula__c</fullName>
        <formula>Employee__r.SSN__c</formula>
        <label>Employee SSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeSurvey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The survey that this employee took.</description>
        <inlineHelpText>The survey that this employee took.</inlineHelpText>
        <label>Employee Survey</label>
        <referenceTo>EmployeeSurvey__c</referenceTo>
        <relationshipLabel>wkt Location Employee Programs</relationshipLabel>
        <relationshipName>wktLocationEmployeeProgram</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employee that all this information pertains to.</description>
        <inlineHelpText>The employee that all this information pertains to.</inlineHelpText>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>wkt Location Employee Programs</relationshipLabel>
        <relationshipName>wktLocationEmployeeProgram</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmploymentReferenceIDFormula__c</fullName>
        <formula>Employment__r.ReferenceID__c</formula>
        <label>Employment Reference ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employment period in question.</description>
        <inlineHelpText>The employment period in question.</inlineHelpText>
        <label>Employment Period</label>
        <referenceTo>Employment__c</referenceTo>
        <relationshipLabel>wkt Location Employee Programs</relationshipLabel>
        <relationshipName>wktLocationEmployeeProgram</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalProcessStageName__c</fullName>
        <description>The client-friendly name for this process stage.</description>
        <formula>QualificationProcessStage__r.ExternalName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The client-friendly name for this process stage.</inlineHelpText>
        <label>External Process Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HireDateFormula__c</fullName>
        <description>The employment start date of the employee.</description>
        <formula>Employment__r.StartDate__c</formula>
        <inlineHelpText>The employment start date of the employee.</inlineHelpText>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HireDate__c</fullName>
        <description>The date this employee was hired at this location.</description>
        <inlineHelpText>The date this employee was hired at this location.</inlineHelpText>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HireLocationNameFormula__c</fullName>
        <formula>HireLocation__r.Name</formula>
        <label>Hire Location Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HireLocationName__c</fullName>
        <label>HireLocationName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HireLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location where the employee was hired.</description>
        <inlineHelpText>The location where the employee was hired.</inlineHelpText>
        <label>Location of Hire</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>wkt Location Employee Programs (Location of Hire)</relationshipLabel>
        <relationshipName>wktLocationEmployeeProgramHire</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocationProgramEndDate__c</fullName>
        <description>The date that this location ended screening for this program.</description>
        <inlineHelpText>The date that this location ended screening for this program.</inlineHelpText>
        <label>Location Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LocationProgramStartDate__c</fullName>
        <description>The date that this location started screening for this program.</description>
        <inlineHelpText>The date that this location started screening for this program.</inlineHelpText>
        <label>Location Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LocationProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the record where the location&apos;s active programs are defined.</description>
        <inlineHelpText>Lookup to the record where the location&apos;s active programs are defined.</inlineHelpText>
        <label>Location Program</label>
        <referenceTo>LocationProgram__c</referenceTo>
        <relationshipLabel>wkt Location Employee Programs</relationshipLabel>
        <relationshipName>wktLocationEmployeeProgram</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessStageFormula__c</fullName>
        <description>Qualification Process Stage internal name.</description>
        <formula>ProgramQualification__r.ProcessStage__r.Name</formula>
        <inlineHelpText>Qualification Process Stage internal name.</inlineHelpText>
        <label>ProcessStageFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessStageRankOrderFormula__c</fullName>
        <formula>ProgramQualification__r.ProcessStage__r.RankOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Stage Rank Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgramEndDate__c</fullName>
        <description>The date this program ended, corresponding to the appropriate program period.</description>
        <inlineHelpText>The date this program ended, corresponding to the appropriate program period.</inlineHelpText>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <label>ProgramName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The applicable period of this program.</description>
        <inlineHelpText>The applicable period of this program.</inlineHelpText>
        <label>Program Period</label>
        <referenceTo>ProgramPeriod__c</referenceTo>
        <relationshipLabel>wkt Location Employee Programs</relationshipLabel>
        <relationshipName>wktLocationEmployeeProgram</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramQualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program qualification connected to this employee at this location.</description>
        <inlineHelpText>The program qualification connected to this employee at this location.</inlineHelpText>
        <label>Program Qualification</label>
        <referenceTo>ProgramQualification__c</referenceTo>
        <relationshipLabel>wkt Location Employee Programs</relationshipLabel>
        <relationshipName>wktLocationEmployeePrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramStartDate__c</fullName>
        <description>The date this program started, corresponding to the appropriate program period.</description>
        <inlineHelpText>The date this program started, corresponding to the appropriate program period.</inlineHelpText>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program begin screened for at this location.</description>
        <inlineHelpText>The program begin screened for at this location.</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>wkt Location Employee Programs</relationshipLabel>
        <relationshipName>wktLocationEmployeeProgram</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPSFormula__c</fullName>
        <formula>ProgramQualification__r.ProcessStage__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QPSFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QualificationProcessStage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current process stage of this employee for this program.</description>
        <inlineHelpText>The current process stage of this employee for this program.</inlineHelpText>
        <label>Qualification Process Stage</label>
        <referenceTo>QualificationProcessStage__c</referenceTo>
        <relationshipLabel>wkt Location Employee Programs</relationshipLabel>
        <relationshipName>wktLocationEmployeePrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QualifiedCategoryText__c</fullName>
        <label>QualifiedCategoryText</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SurveyDate__c</fullName>
        <description>The date and time that this employee was surveyed under this employment period, regardless of location of survey.</description>
        <inlineHelpText>The date and time that this employee was surveyed under this employment period, regardless of location of survey.</inlineHelpText>
        <label>Survey Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SurveyLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location where the employee was surveyed; may be different from the location of hire.</description>
        <inlineHelpText>The location where the employee was surveyed; may be different from the location of hire.</inlineHelpText>
        <label>Location of Survey</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>wkt Location Employee Programs (Location of Survey)</relationshipLabel>
        <relationshipName>wktLocationEmployeeProgramSurvey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyProgramScreened__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the record showing each program that the employee actually screened for.</description>
        <inlineHelpText>A lookup to the record showing each program that the employee actually screened for.</inlineHelpText>
        <label>Survey Program Screened</label>
        <referenceTo>SurveyProgramScreened__c</referenceTo>
        <relationshipLabel>wkt Location Employee Programs</relationshipLabel>
        <relationshipName>wktLocationEmployeeProgram</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>wkt Location Employee Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EmployeeName__c</columns>
        <columns>HireDate__c</columns>
        <columns>HireLocationName__c</columns>
        <columns>HireLocation__c</columns>
        <columns>SurveyLocation__c</columns>
        <columns>LocationProgram__c</columns>
        <columns>LocationProgramEndDate__c</columns>
        <columns>LocationProgramStartDate__c</columns>
        <columns>Program__c</columns>
        <columns>ProgramEndDate__c</columns>
        <columns>ProgramName__c</columns>
        <columns>ProgramStartDate__c</columns>
        <columns>SurveyDate__c</columns>
        <columns>SurveyProgramScreened__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Location Employee Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>wkt Location Employee Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>